fix: ajuste no swagger adicionando o body do post e patch
