# src/controllers/ViagemController.js
@@ -22,6 +22,23 @@ class ViagemController {
   async store(req, res) {
     // #swagger.tags = ['Viagens']
     // #swagger.description = 'Cria uma nova viagem'
+    /*
+      #swagger.parameters['body'] = {
+        in: 'body',
+        required: true,
+        schema: {
+          titulo: 'Rio de Janeiro',
+          descricao: 'Viagem para o Rio com hotel incluso',
+          dias: 5,
+          valor: 1500.0,
+          avaliacao: 4,
+          latitude: -22.9035,
+          longitude: -43.2096,
+          data: '2025-10-02',
+          vagas: 100
+        }
+      }
+    */
     try {
       const trip = await Viagem.create(req.body);
 
@@ -57,6 +74,24 @@ class ViagemController {
   async update(req, res) {
     // #swagger.tags = ['Viagens']
     // #swagger.description = 'Edita uma viagem pelo seu ID'
+    /*
+      #swagger.parameters['body'] = {
+        in: 'body',
+        required: true,
+        schema: {
+          id: '94c67a6b-ccbb-4ab3-a683-3ce924592aa0',
+          titulo: 'Rio de Janeiro',
+          descricao: 'Viagem para o Rio com hotel incluso',
+          dias: 5,
+          valor: 1500.0,
+          avaliacao: 4,
+          latitude: -22.9035,
+          longitude: -43.2096,
+          data: '2025-10-02',
+          vagas: 100
+        }
+      }
+    */
     try {
       const { id } = req.params;
 
